--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,12 +8,11 @@ lint:
   script:
     - pip install flake8
     - flake8
-    - apk add git
     - python setup.py check
 
 test:
   stage: test
   script:
     - apk add git g++
-    - pip install .
-    - python setup.py test
+    - pip install '.[test]'
+    - pytest
