--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -13,6 +13,4 @@ lint:
 test:
   stage: test
   script:
-    - apk add git g++
-    - pip install '.[test]'
-    - pytest
+    - python -m unittest discover tests --buffer --verbose
