--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,6 @@
-
 [project]
 name = "cloneholio"
-version = "0.13.1"
+dynamic = ["version"]
 description = "I am cloneholio! I need syncing of my repos."
 readme = "README.rst"
 authors = [
@@ -32,3 +31,6 @@ cloneholio = "cloneholio.__main__:main"
 [build-system]
 requires = ["pdm-backend"]
 build-backend = "pdm.backend"
+
+[tool.pdm.version]
+source = "scm"
